fix #724: align horizontally labels to fields in modal forms

--- a/frontend/style/misago/modals.less
+++ b/frontend/style/misago/modals.less
@@ -96,13 +96,6 @@
   min-height: 34px;
 }
 
-@media screen and (min-width: @screen-md-min) {
-  .modal-body .form-group .control-label {
-    position: relative;
-    top: 7px;
-  }
-}
-
 
 // Registration modal
 .modal-register .modal-footer a {
